--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,18 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program":"${workspaceFolder}/cmd/main"
+            "program":"${workspaceFolder}/cmd/main",
+            "args": ["-conf", "../../config", "-path", "../../dist"]
+        },
+        {
+            "name":"tsTest",
+            "type":"node",
+            "request": "launch",
+            "program":"${workspaceFolder}/js/test.ts",
+            "preLaunchTask":"tsc: build - tsconfig.json",
+            "outFiles":[
+                "${workspaceFolder}/out/**/*.js"
+            ]
         }
     ]
 }
