--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,14 +6,14 @@
             "request": "launch",
             "name": "test ts",
             "protocol": "inspector",
-            "args": ["./js/executor/tempStart.ts"],
-            "runtimeArgs": ["-r", "./js/executor/preload.js"],
+            "args": ["./packages/executor/bin/tf-builder.ts","./packages/executor/testFiles/test"],
+            "runtimeArgs": ["-r", "ts-node/register/transpile-only"],
             "outFiles": [
                 "${workspaceFolder}/build/**/*.js"
             ],
             "skipFiles": [
-                "${workspaceFolder}/node_modules/lodash/**/*.js"
+                "${workspaceFolder}/packages/*/node_modules/lodash/**/*.js"
             ]
         }
-    
+    ]
 }
