--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,4 +1,6 @@
 {
+    "name": "tf-builder-core",
+    "version":"0.0.1",
     "dependencies": {
         "callsite": "^1.0.0",
         "chalk": "^2.4.2",
@@ -6,5 +8,8 @@
     },
     "devDependencies": {
         "@types/lodash": "^4.14.123"
+    },
+    "scripts": {
+        "build":"tsc & cp package.json dist/package.json"
     }
 }
