--- a/packages/executor/package.json
+++ b/packages/executor/package.json
@@ -1,13 +1,18 @@
 {
+    "name":"tf-builder-run",
+    "version": "0.0.1",
     "dependencies": {
         "lodash": "^4.17.15",
-        "commander": "^3.0.2"
+        "commander": "^3.0.2",
+        "chalk": "^2.4.2"
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.123",
-        "@types/commander": "2.12.2"
+        "@types/lodash": "^4.14.123"
     },
     "optionalDependencies": {
         "ts-node": "8.3.0"
+    },
+    "scripts": {
+        "build":"tsc & cp package.json dist/package.json & cp -r types dist/types"
     }
 }
