--- a/packages/executor/package.json
+++ b/packages/executor/package.json
@@ -1,5 +1,5 @@
 {
-    "name":"tf-builder-run",
+    "name": "aws-cf-builder-run",
     "version": "0.0.1",
     "dependencies": {
         "lodash": "^4.17.15",
@@ -7,12 +7,12 @@
         "chalk": "^2.4.2"
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.123"
-    },
-    "optionalDependencies": {
-        "ts-node": "8.3.0"
+        "@types/lodash": "^4.14.123",
+        "@types/js-yaml": "^3.12.1",
+        "ts-node": "^8.4.1",
+        "js-yaml": "^3.13.1"
     },
     "scripts": {
-        "build":"tsc & cp package.json dist/package.json & cp -r types dist/types"
+        "build": "tsc & cp package.json dist/package.json & cp -r types dist/types"
     }
 }
