--- a/packages/executor/package.json
+++ b/packages/executor/package.json
@@ -1,7 +1,9 @@
 {
     "name": "aws-cf-builder-run",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "dependencies": {
+        "aws-cf-builder-core": "file:../core/dist",
+        "aws-cf-builder-defined-resources": "file:../cf-definedResources/dist",
         "lodash": "^4.17.15",
         "commander": "^3.0.2",
         "chalk": "^2.4.2"
@@ -12,10 +14,17 @@
         "ts-node": "^8.4.1",
         "js-yaml": "^3.13.1"
     },
+    "bundleDependencies": [
+        "aws-cf-builder-core",
+        "aws-cf-builder-defined-resources"
+    ],
     "scripts": {
-        "build": "tsc & cp package.json dist/package.json & cp -r types dist/types",
+        "build": "tsc & cp package.json dist/package.json & cp -r types dist/ & cp cf.tsconfig.json dist/cf.tsconfig.json",
         "runTest": "npx ts-node -T bin/cf-builder.ts testFiles/test.cf.ts -o testFiles/out",
-        "buildCore":"cd ../core && npm run build",
-        "buildPreDef":"cd ../cf-definedResources && npm run build"
+        "buildCore": "cd ../core && npm run build",
+        "buildPreDef": "cd ../cf-definedResources && npm run build"
+    },
+    "bin": {
+        "cf-builder":"./bin/cf-builder.js"
     }
 }
