--- a/packages/executor/.vscode/launch.json
+++ b/packages/executor/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "name": "test ts",
             "protocol": "inspector",
-            "args": ["./bin/cf-builder.ts","./testFiles/cloudwatch.cf.ts"],
+            "args": ["./bin/cf-builder.ts","./testFiles/apigateway.cf.ts"],
             "runtimeArgs": ["-r", "ts-node/register/transpile-only"],
             "outFiles": [
                 "${workspaceFolder}/build/**/*.js"
