--- a/packages/executor/package.json
+++ b/packages/executor/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aws-cf-builder-run",
-    "version": "0.1.10",
+    "version": "1.0.0",
     "dependencies": {
         "aws-cf-builder-core": "file:../core/dist",
         "aws-cf-builder-defined-resources": "file:../cf-definedResources/dist",
@@ -11,8 +11,11 @@
     "devDependencies": {
         "@types/lodash": "^4.14.123",
         "@types/js-yaml": "^3.12.1",
+        "@types/jest": "^25.1.1",
         "ts-node": "^8.4.1",
-        "js-yaml": "^3.13.1"
+        "js-yaml": "^3.13.1",
+        "jest": "^25.1.0",
+        "ts-jest": "^25.2.0"
     },
     "bundleDependencies": [
         "aws-cf-builder-core",
@@ -26,6 +29,6 @@
         "buildDeployment": "npx ts-node buildDeploymentPackage.ts"
     },
     "bin": {
-        "cf-builder":"./bin/cf-builder.js"
+        "cf-builder": "./bin/cf-builder.js"
     }
 }
