rename to aws-cf-builder

--- a/packages/executor/package.json
+++ b/packages/executor/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "aws-cf-builder-run",
+    "name": "aws-cf-builder",
     "version": "1.0.0",
     "dependencies": {
         "aws-cf-builder-core": "file:../core/dist",
