--- a/packages/cf-definedResources/package.json
+++ b/packages/cf-definedResources/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aws-cf-builder-defined-resources",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "dependencies": {
         "lodash": "^4.17.15"
     },
@@ -8,7 +8,15 @@
         "@types/node": "^12.11.1",
         "@types/lodash": "^4.14.149"
     },
+    "peerDependencies": {
+        "aws-cf-builder-core": "~1.0.0"
+    },
     "scripts": {
-        "build":"tsc && cp package.json dist/package.json"
-    }
+        "build": "tsc && cp package.json dist/package.json"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/royAmmerschuber/aws-cf-builder/tree/master/packages/cf-definedResources"
+    },
+    "license": "ISC"
 }
