--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,5 +11,10 @@
     },
     "scripts": {
         "build":"tsc & cp package.json dist/package.json"
-    }
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/royAmmerschuber/aws-cf-builder/tree/master/packages/core"
+    },
+    "license": "ISC"
 }
