fixed custom with param & various resources

--- a/packages/executor/tsconfig.json
+++ b/packages/executor/tsconfig.json
@@ -6,6 +6,7 @@
         "./buildDeploymentPackage.ts"
     ],
     "compilerOptions": {
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "skipLibCheck": true
     }
 }
