--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aws-cf-builder-core",
-    "version":"1.0.7",
+    "version":"1.0.8",
     "dependencies": {
         "callsite": "^1.0.0",
         "chalk": "^3.0.0",
@@ -10,7 +10,8 @@
         "@types/lodash": "^4.14.149"
     },
     "scripts": {
-        "build":"tsc & cp package.json dist/package.json"
+        "build":"tsc & cp package.json dist/package.json",
+        "publish":"npm run build && cd dist && npm publish"
     },
     "repository": {
         "type": "git",
