--- a/packages/executor/package.json
+++ b/packages/executor/package.json
@@ -1,9 +1,9 @@
 {
     "name": "aws-cf-builder",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "dependencies": {
-        "aws-cf-builder-core": "~1.0.8",
-        "aws-cf-builder-defined-resources": "~1.1.1",
+        "aws-cf-builder-core": "~1.0.9",
+        "aws-cf-builder-defined-resources": "~1.1.2",
         "chalk": "^2.4.2",
         "commander": "^3.0.2",
         "lodash": "^4.17.15"
@@ -22,7 +22,8 @@
         "build": "rm -rf dist && tsc && cp  package.json dist/package.json && cp -r types dist/ && cp cf.tsconfig.json dist/cf.tsconfig.json",
         "buildCore": "cd ../core && npm run build",
         "buildPreDef": "cd ../cf-definedResources && npm run build",
-        "link": "cd ../core/dist && npm link && cd ../../cf-definedResources && npm link aws-cf-builder-core && cd dist && npm link && cd ../../executor && npm link aws-cf-builder-core && npm link aws-cf-builder-defined-resources"
+        "link": "cd ../core/dist && npm link && cd ../../cf-definedResources && npm link aws-cf-builder-core && cd dist && npm link && cd ../../executor && npm link aws-cf-builder-core && npm link aws-cf-builder-defined-resources",
+        "publish":"npm run build && cd dist && npm publish"
     },
     "bin": {
         "cf-builder": "./bin/cf-builder.js"
