--- a/packages/cf-definedResources/package.json
+++ b/packages/cf-definedResources/package.json
@@ -12,8 +12,8 @@
         "aws-cf-builder-core": "~1.0.9"
     },
     "scripts": {
-        "build": "tsc && cp package.json dist/package.json",
-        "publish":"npm run build && cd dist && npm publish"
+        "build": "rm -rf dist/* & tsc && cp package.json dist/package.json",
+        "pub":"npm run build && npm publish dist"
 
     },
     "repository": {
