--- a/packages/cf-definedResources/tsconfig.json
+++ b/packages/cf-definedResources/tsconfig.json
@@ -5,7 +5,6 @@
         "node_modules"
     ],
     "compilerOptions": {
-        "outDir": "dist",
-        "sourceMap": false
+        "outDir": "dist"
     }
 }
