--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,8 +10,8 @@
         "@types/lodash": "^4.14.149"
     },
     "scripts": {
-        "build":"tsc & cp package.json dist/package.json",
-        "publish":"npm run build && cd dist && npm publish"
+        "build": "rm -rf dist/* & tsc && cp package.json dist/package.json",
+        "pub":"npm run build && npm publish dist"
     },
     "repository": {
         "type": "git",
