--- a/packages/executor/package.json
+++ b/packages/executor/package.json
@@ -6,24 +6,29 @@
         "aws-cf-builder-defined-resources": "~1.1.2",
         "chalk": "^2.4.2",
         "commander": "^3.0.2",
-        "lodash": "^4.17.19"
+        "json-stable-stringify": "^1.0.1",
+        "lodash": "^4.17.19",
+        "slash": "^3.0.0"
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.123",
-        "@types/js-yaml": "^3.12.1",
         "@types/jest": "^25.1.1",
-        "ts-node": "^8.4.1",
+        "@types/js-yaml": "^3.12.1",
+        "@types/json-stable-stringify": "1.0.32",
+        "@types/lodash": "^4.14.123",
+        "jest": "^26.1.0",
         "js-yaml": "^3.13.1",
-        "jest": "^25.1.0",
-        "ts-jest": "^25.2.0"
+        "ts-jest": "^26.1.1",
+        "ts-node": "^8.4.1",
+        "typescript": "^3.9.6"
     },
     "scripts": {
+        "pretest": "npx ts-node -T bin/cf-builder.ts testFiles --generate-tsconfig",
         "test": "npx jest",
         "build": "rm -rf dist/* && tsc && cp  package.json dist/package.json && cp -r types dist/ && cp cf.tsconfig.json dist/cf.tsconfig.json",
         "buildCore": "cd ../core && npm run build",
         "buildPreDef": "cd ../cf-definedResources && npm run build",
         "link": "cd ../core/dist && npm link && cd ../../cf-definedResources && npm link aws-cf-builder-core && cd dist && npm link && cd ../../executor && npm link aws-cf-builder-core && npm link aws-cf-builder-defined-resources",
-        "pub":"npm run build && npm publish dist"
+        "pub": "npm run build && npm publish dist"
     },
     "bin": {
         "cf-builder": "./bin/cf-builder.js"
