--- a/packages/executor/tsconfig.json
+++ b/packages/executor/tsconfig.json
@@ -7,6 +7,7 @@
     ],
     "compilerOptions": {
         "outDir": "./dist",
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "resolveJsonModule": true
     }
 }
