--- a/packages/executor/cf.tsconfig.json
+++ b/packages/executor/cf.tsconfig.json
@@ -4,7 +4,8 @@
             "./types",
             "./node_modules/@types/node"
         ],
-        "target": "es2017",
+        "target": "es2019",
+        "lib": ["es2019", "es2020.bigint", "es2020.string", "es2020.symbol.wellknown"],
         "module": "commonjs",
         "declaration": true,
         "outDir": "out",
