--- a/packages/executor/package.json
+++ b/packages/executor/package.json
@@ -8,7 +8,8 @@
         "commander": "^3.0.2",
         "json-stable-stringify": "^1.0.1",
         "lodash": "^4.17.19",
-        "slash": "^3.0.0"
+        "slash": "^3.0.0",
+        "ts-morph": "^7.3.0"
     },
     "devDependencies": {
         "@types/jest": "^25.1.1",
