--- a/packages/executor/tsconfig.json
+++ b/packages/executor/tsconfig.json
@@ -8,6 +8,7 @@
     "compilerOptions": {
         "outDir": "./dist",
         "skipLibCheck": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "sourceMap": true
     }
 }
