--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
         "@types/node": "^10.13.0",
         "ts-node": "^8.1.0",
         "typescript": "^3.9.6"
+    },
+    "dependencies": {
+        "@types/jest": "^26.0.14",
+        "jest": "^26.5.0",
+        "ts-jest": "^26.4.1"
     }
 }
