--- a/packages/executor/testFiles/tsconfig.json
+++ b/packages/executor/testFiles/tsconfig.json
@@ -2,9 +2,15 @@
     "compilerOptions": {
         "typeRoots": [
             "../types",
-            "../node_modules/@types"
+            "../../../node_modules/@types"
         ],
-        "target": "es2017",
+        "target": "es2019",
+        "lib": [
+            "es2019",
+            "es2020.bigint",
+            "es2020.string",
+            "es2020.symbol.wellknown"
+        ],
         "module": "commonjs",
         "declaration": true,
         "outDir": "out",
