--- a/packages/cf-definedResources/package.json
+++ b/packages/cf-definedResources/package.json
@@ -1,19 +1,19 @@
 {
     "name": "aws-cf-builder-defined-resources",
-    "version": "1.1.6",
+    "version": "1.1.7",
     "dependencies": {
         "lodash": "^4.17.21"
     },
     "devDependencies": {
-        "@types/node": "^12.11.1",
-        "@types/lodash": "^4.14.149"
+        "@types/lodash": "^4.14.149",
+        "@types/node": "^12.11.1"
     },
     "peerDependencies": {
-        "aws-cf-builder-core": "~1.0.9"
+        "aws-cf-builder-core": "~1.1.3"
     },
     "scripts": {
         "build": "rm -rf dist/* & tsc && cp package.json dist/package.json",
-        "pub": "npm run build && npm publish dist"
+        "pub": "npm run build && npm publish ./dist"
     },
     "repository": {
         "type": "git",
