--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     },
     "dependencies": {
         "@types/jest": "^26.0.14",
+        "@types/lodash": "^4.14.170",
         "jest": "^26.5.0",
-        "ts-jest": "^26.4.1"
+        "lodash": "^4.17.21",
+        "ts-jest": "^26.4.1",
+        "ts-morph": "^11.0.0"
     }
 }
